start front-end

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Prova de conceito</title>
+    <title>Inicializador de projetos</title>
 
   </head>
-  <body>
+  <body style="margin: 0px;">
   </body>
 </html>
